--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -7,7 +7,6 @@ body {
   background: #f1f1f1;
   margin: 0 15px 0 15px;
   height: 100%;
-
 }
 
 .header {
@@ -18,7 +17,6 @@ body {
 .header h1 {
   font-size: 20px;
 }
-
 
 /* Style the top navigation bar */
 .topnav {
@@ -46,11 +44,26 @@ body {
     text-decoration: none;
     color: rgb(226, 224, 224);
     margin: 0 10px;
+    font-size: 17px;
+    padding: 14px 16px;
+
 }
 
-span{
-    color: #54D17A;
+.menu a.active {
+  background-color: #4CAF50;
+  color: white;
 }
+
+.menu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+/* span {
+    color: #54D17A;
+}*/ 
+
 label{
     margin: 0 40px 0 0;
     font-size: 26px;
