--- a/css/base.css
+++ b/css/base.css
@@ -41,9 +41,22 @@ body {
 }
 
 .menu a {
-    text-decoration: none;
-    color: rgb(226, 224, 224);
-    margin: 0 10px;
+  text-decoration: none;
+  color: rgb(226, 224, 224);
+  margin: 0 10px;
+  font-size: 17px;
+  padding: 14px 16px;
+
+}
+
+.menu a.active {
+background-color: #4CAF50;
+color: white;
+}
+
+.menu a:hover {
+background-color: #ddd;
+color: black;
 }
 
 span{
