--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,26 @@ body {
     text-decoration: none;
     color: rgb(226, 224, 224);
     margin: 0 10px;
+    font-size: 17px;
+    padding: 14px 16px;
+
 }
 
-span{
-    color: #54D17A;
+.menu a.active {
+  background-color: #4CAF50;
+  color: white;
 }
+
+.menu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+/* span {
+    color: #54D17A;
+}*/ 
+
 label{
     margin: 0 40px 0 0;
     font-size: 26px;
